Add config for surefire-plugin